# SRU-Library

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: mylibConfig.cmake.in
include/SRU/: assets.hpp  audio.hpp  file.hpp  particles.hpp  random.hpp  render.hpp  sru.hpp  text.hpp  timer.hpp  util.hpp
source/: assets.cpp  audio.cpp  file.cpp  particles.cpp  render.cpp  text.cpp
